# fiap-student-dropout

./: .dockerignore  .gitignore  Dockerfile  README.md  backlog.md  pyproject.toml
.github/workflows/: ci-cd.yml
artifacts/form_options/: curso_values.txt  estadocivil_values.txt  nacionalidade_values.txt  qualificacaoanterior_values.txt  target_values.txt
data/processed/: X_test.csv  X_train.csv
data/raw/: data.csv
models/: dropout_classifier_v1.pkl
scripts/: check_training_files.py  generate_dashboard.py
src/: analise_valores.py  app.py  data_fetcher.py  ibge_data_extractor.py  prepare_data.py  train_model.py
src/old/: app.py  model_utils.py  preprocess_utils.py  train_pipeline.py
