[project]
name = "fiap-ml-03"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-restx>=1.3.0",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.0",  
    "matplotlib>=3.8.0", 
    "streamlit>=1.32.0",
]